# Modular

./: .gitignore  CMakeLists.txt  README.md
Modular/: CMakeLists.txt
Modular/Resources/shaders/: Main.fs
Modular/Source/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Modular.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Sandbox/: CMakeLists.txt
Sandbox/Source/: GLWidget.cpp  GLWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h
Sandbox/UI/: MainWindow.ui
